# discord-alert-bridge

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  admin.py  main.py  pyproject.toml  requirements.txt  start_admin.command
discord_alert_bridge/: admin.py  admin_auth.py  admin_ui.py  config.py  discord_gateway.py  formatting.py  forwarders.py  main.py  message_store.py  models.py  paths.py
tests/: test_admin.py  test_admin_auth.py  test_config.py  test_formatting.py  test_forwarders.py  test_gateway.py  test_message_store.py
